fix: hide h1 tag

--- a/museum/index.html
+++ b/museum/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+  <h1 class="visuallyhidden">Louvre</h1>
   <div class="wrapper">
     <header class="header" id="top">
       <div class="container header-container">
@@ -52,7 +53,7 @@
       <section class="section welcome-section" id="welcome">
         <div class="container">
           <div class="main-text">
-            <h1 class="main-heading">welcome<br>to the Louvre</h1>
+            <h2 class="main-heading">welcome<br>to the Louvre</h2>
             <p class="main-description">From the castle to the museum</p>
             <div class="main-btn">
               <a href="./tours/discover.html"
