feat: add js for slider pagination

--- a/museum/index.html
+++ b/museum/index.html
@@ -43,9 +43,6 @@
             </ul>
           </div>
         </nav>
-
-
-
       </div>
     </header>
 
@@ -64,28 +61,29 @@
             </div>
           </div>
           <div class="gradient-filter"></div>
+
           <div class="welcome-slider">
             <div class="slider-imgs">
-              <div style="background-image: url('./assets/img/welcome-slider/1.jpg');"></div>
-              <!-- <div style="background-image: url('./assets/img/welcome-slider/2.jpeg');"></div>
-              <div style="background-image: url('./assets/img/welcome-slider/3.jpeg');"></div>
-              <div style="background-image: url('./assets/img/welcome-slider/4.jpeg');"></div>
-              <div style="background-image: url('./assets/img/welcome-slider/5.jpeg');"></div> -->
+              <div class="slide active-slide slide1" style="background-image: url('./assets/img/welcome-slider/1.jpg');"></div>
+              <div class="slide slide2" style="background-image: url('./assets/img/welcome-slider/2.jpeg');"></div>
+              <div class="slide slide3" style="background-image: url('./assets/img/welcome-slider/3.jpeg');"></div>
+              <div class="slide slide4" style="background-image: url('./assets/img/welcome-slider/4.jpeg');"></div>
+              <div class="slide slide5" style="background-image: url('./assets/img/welcome-slider/5.jpeg');"></div>
             </div>
             <div class="slider-ctrls">
-              <p class="slide-number"><span class="current-slide">01</span><span class="text-devider">|</span><span class="total-slides">05</span></p>
+              <p class="slide-number"><span class="current-slide-fraction">01</span><span class="text-devider">|</span><span class="total-slides">05</span></p>
               <div class="slider-bullets">
-                <div class="slider-bullet active"></div>
+                <div class="slider-bullet active-slide-bullet"></div>
                 <div class="slider-bullet"></div>
                 <div class="slider-bullet"></div>
                 <div class="slider-bullet"></div>
                 <div class="slider-bullet"></div>
               </div>
               <div class="slider-btns">
-                <button class="slider-btn prev">
+                <button class="slider-btn prev slider-btn-prev">
                   <img src="./assets/img/welcome-slider/left.svg" alt="previous image">
                 </button>
-                <button class="slider-btn next">
+                <button class="slider-btn next slider-btn-next">
                   <img src="./assets/img/welcome-slider/right.svg" alt="next image">
                 </button>
               </div>
